
- `simGG` now includes rug plots.

    + Note that for `simGG.simtvc` that rug plots are not produced. All x-axes
are Time.

- `simGG` default type is now `lines`, rather than `points`.

- For `simGG` plots with a covariate represented on the x-axis,
the variable name is printed by default on the plot.

- `as.data.frame.coxsim` added to convert the output of a coxsim function to
a data frame

- Bug fixes in `simGG.simspline` with Hazard Rates.

- Minor internal code and documentation improvements.

## Version 1.2.6.1

Trivial README.md change to address CRAN Markdown processor issue.

## Version 1.2.6

- No longer depends on DataCombine.

- Minor documentation improvements.

## Version 1.2.5

- Minor documentation and internal code improvements.

## Version 1.2.4

- Bug fix for `coxsimSpline` where the `SimID` was not correctly identified.

Addressed minor bug in `SurvExpand` from data.table.

## Version 1.2.3

- Minor changes to `SurvExpand` to work with dplyr 0.3.

- Now requires dplyr 0.3.

- coxsim objects now also given the class `data.frame`.

- No longer depends on plyr.

## Version 1.2.2

- Added `PartialData` argument to `SurvExpand`. The argument allows the user to
determine whether or not to only keep the expanded data needed to find the Cox
partial likelihood.

- Made `MinMaxLines` a top level function that is useful for returning basic
summary statistics from coxsim constricted simulation intervals. Using the
argument `clean = TRUE` returns the simulations' medians, the minimum and
maximum of the constricted intervals (as set in the `coxsim` call) and the lower
and upper 50% of the constricted intervals.

- `MinMaxLines` also now relies on *dplyr* rather than *plyr*. This improves
performance.

## Version 1.2.1

- Minor documentation improvements.

## Version 1.2

- !!!! `smoother` argument for `simGG` is deprecated. Use `method` instead.
The functionality is exactly the same. !!!!

- `tvc` now accepts a vector of variable names.
