@@ -23,7 +23,6 @@ import(lazyeval)
 import(mgcv)
 import(quadprog)
 importFrom(MASS,mvrnorm)
-importFrom(car,scatter3d)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,distinct)
 importFrom(dplyr,distinct_)
