@@ -1,6 +1,6 @@
 #' Plot simulated penalised spline hazards from Cox Proportional Hazards Models
 #'
-#' \code{simGG.simspline} uses \link{ggplot2} and \link{scatter3d} to plot
+#' \code{simGG.simspline} uses \link{ggplot2} to plot
 #' quantities of interest from \code{simspline} objects, including relative
 #' hazards, first differences, hazard ratios, and hazard rates.
 #'
@@ -42,12 +42,6 @@
 #' maximum value per line or point at the center of the distribution. Lines or
 #' points further from the center are more transparent the further they get
 #' from the middle.
-#' @param surface plot surface. Default is \code{surface = TRUE}. Only relevant
-#' if \code{qi == 'Hazard Rate'} and \code{FacetTime = NULL}.
-#' @param fit one or more of \code{"linear"}, \code{"quadratic"},
-#' \code{"smooth"}, \code{"additive"}; to display fitted surface(s); partial
-#' matching is supported e.g., \code{c("lin", "quad")}. Only relevant if
-#' \code{qi == 'Relative Hazard'} and \code{FacetTime = NULL}.
 #' @param type character string. Specifies how to plot the simulations. Can be
 #' \code{points}, \code{lines}, or \code{ribbons}. If points then each
 #' simulation value will be plotted. If \code{lines} is chosen then each
@@ -62,19 +56,16 @@
 #' rather than points is that it creates plots with smaller file sizes.
 #' @param ... Additional arguments. (Currently ignored.)
 #'
-#' @return a \code{gg} \code{ggplot} class object. See \code{\link{scatter3d}}
-#' for values from \code{scatter3d} calls.
+#' @return a \code{gg} \code{ggplot} class object.
 #'
-#' @details Uses \code{ggplot2} and \code{scatter3d} to plot the quantities of
+#' @details Uses \code{ggplot2} to plot the quantities of
 #' interest from \code{simspline} objects, including relative hazards, first
 #' differences, hazard ratios, and hazard rates. If currently does not support
 #' hazard rates for multiple strata.
 #'
-#' It can graph hazard rates as a 3D plot using \code{\link{scatter3d}} with
-#' the dimensions: Time, Hazard Rate, and the value of \code{Xj}. Ribbon plots
-#' are not available with 3D plots. You can also choose to plot hazard rates
-#' for a range of values of \code{Xj} in two dimensional plots at specific
-#' points in time. Each plot is arranged in a facet grid.
+#' You can to plot hazard rates for a range of values of \code{Xj} in two 
+#' dimensional plots at specific points in time. Each plot is arranged in a 
+#' facet grid.
 #'
 #' Note: A dotted line is created at y = 1 (0 for first difference), i.e. no
 #' effect, for time-varying hazard ratio graphs. No line is created for hazard
@@ -113,9 +104,6 @@
 #'                     qi = "Hazard Rate",
 #'                     Xj = seq(1, 30, by = 2), ci = 0.9, nsim = 10)
 #'
-#' # 3D plot hazard rate
-#' simGG(Sim2, zlab = "orderent", fit = "quadratic")
-#'
 #' # Create a time grid plot
 #' # Find all points in time where baseline hazard was found
 #' unique(Sim2$Time)
@@ -141,12 +129,11 @@
 #' }
 #'
 #' @seealso \code{\link{coxsimLinear}}, \code{\link{simGG.simtvc}},
-#' \code{\link{ggplot2}}, and \code{\link{scatter3d}}
+#' \code{\link{ggplot2}}
 #'
 #'
 #' @import ggplot2
 #' @import mgcv
-#' @importFrom car scatter3d
 #'
 #' @method simGG simspline
 #' @export
@@ -155,8 +142,7 @@ simGG.simspline <- function(obj, SmoothSpline = TRUE, FacetTime = NULL,
                             from = NULL, to = NULL, xlab = NULL, ylab = NULL,
                             zlab = NULL, title = NULL, method = "auto",
                             lcolour = "#2B8CBE", lsize = 1, pcolour = "#A6CEE3",
-                            psize = 1, alpha = 0.2, surface = TRUE,
-                            fit = "linear", type = "lines", ...)
+                            psize = 1, alpha = 0.2, type = "lines", ...)
 {
     Time <- Xj <- QI <- Lower50 <- Upper50 <- Min <- Max <- Median <-
     SimID <- NULL
@@ -170,6 +156,13 @@ simGG.simspline <- function(obj, SmoothSpline = TRUE, FacetTime = NULL,
         message(paste0('The resulting plot may look strange.',
                 '\nI suggest using SmoothSpline = TRUE if type = "lines".'))
     }
+    
+    if (is.null(FacetTime) & qi == 'Hazard Rate') {
+        stop('FacetTime must be specified with hazard rates. scatter3d no longer
+             supported.',
+             .call = FALSE)
+    }
+    
     # Find quantity of interest
     qi <- class(obj)[[2]]
 
@@ -180,14 +173,14 @@ simGG.simspline <- function(obj, SmoothSpline = TRUE, FacetTime = NULL,
     obj <- as.data.frame(obj)
 
     # Drop simulations that include outliers
-    obj <- OutlierDrop(obj)
+    obj <- simPH:::OutlierDrop(obj)
 
     # Smooth simulations if SmoothSpline = TRUE
     if (isTRUE(SmoothSpline)){
         if (qi != 'Hazard Rate'){
             obj <- SmoothSimulations(obj)
         } else if (qi == 'Hazard Rate'){
-            obj <- SmoothSimulations(obj, xaxis = 'Time')
+            obj <- simPH:::SmoothSimulations(obj, xaxis = 'Time')
         }
     }
 
@@ -195,7 +188,7 @@ simGG.simspline <- function(obj, SmoothSpline = TRUE, FacetTime = NULL,
     if (type != 'ribbons' & qi != 'Hazard Rate'){
         obj <- PercRank(obj, xaxis = 'Xj')
     } else if (type != 'ribbons' & qi == 'Hazard Rate'){
-        obj <- PercRank(obj, xaxis = 'Time', yaxis = 'HRate')
+        obj <- simPH:::PercRank(obj, xaxis = 'Time', yaxis = 'HRate')
     }
 
     # Constrict time period to plot for hazard rate
@@ -231,10 +224,6 @@ simGG.simspline <- function(obj, SmoothSpline = TRUE, FacetTime = NULL,
                     scale_alpha_continuous(range = c(0, alpha), guide = FALSE) +
                     xlab(xlab) + ylab(ylab) + ggtitle(title) +
                     theme_bw(base_size = 15)
-        } else if (qi == "Hazard Rate" & is.null(FacetTime)){
-            with(obj, scatter3d(x = Time, y = QI, z = Xj,
-                            xlab = xlab, ylab = ylab, zlab = zlab,
-                            surface = surface, fit = fit))
         } else if (qi == "Hazard Rate" & !is.null(FacetTime)){
             objSub <- SubsetTime(FacetTime)
             p <- ggplot(objSub, aes(Xj, QI)) +
@@ -334,5 +323,5 @@ simGG.simspline <- function(obj, SmoothSpline = TRUE, FacetTime = NULL,
         }
         )
     }
-    if (qi != "Hazard Rate" & !is.null(FacetTime)) return(p)
+    return(p)
 }
