@@ -7,8 +7,7 @@
 \method{simGG}{simspline}(obj, SmoothSpline = TRUE, FacetTime = NULL,
   from = NULL, to = NULL, xlab = NULL, ylab = NULL, zlab = NULL,
   title = NULL, method = "auto", lcolour = "#2B8CBE", lsize = 1,
-  pcolour = "#A6CEE3", psize = 1, alpha = 0.2, surface = TRUE,
-  fit = "linear", type = "lines", ...)
+  pcolour = "#A6CEE3", psize = 1, alpha = 0.2, type = "lines", ...)
 }
 \arguments{
 \item{obj}{a \code{simspline} class object}
@@ -64,14 +63,6 @@ maximum value per line or point at the center of the distribution. Lines or
 points further from the center are more transparent the further they get
 from the middle.}
 
-\item{surface}{plot surface. Default is \code{surface = TRUE}. Only relevant
-if \code{qi == 'Hazard Rate'} and \code{FacetTime = NULL}.}
-
-\item{fit}{one or more of \code{"linear"}, \code{"quadratic"},
-\code{"smooth"}, \code{"additive"}; to display fitted surface(s); partial
-matching is supported e.g., \code{c("lin", "quad")}. Only relevant if
-\code{qi == 'Relative Hazard'} and \code{FacetTime = NULL}.}
-
 \item{type}{character string. Specifies how to plot the simulations. Can be
 \code{points}, \code{lines}, or \code{ribbons}. If points then each
 simulation value will be plotted. If \code{lines} is chosen then each
@@ -88,25 +79,22 @@ rather than points is that it creates plots with smaller file sizes.}
 \item{...}{Additional arguments. (Currently ignored.)}
 }
 \value{
-a \code{gg} \code{ggplot} class object. See \code{\link{scatter3d}}
-for values from \code{scatter3d} calls.
+a \code{gg} \code{ggplot} class object.
 }
 \description{
-\code{simGG.simspline} uses \link{ggplot2} and \link{scatter3d} to plot
+\code{simGG.simspline} uses \link{ggplot2} to plot
 quantities of interest from \code{simspline} objects, including relative
 hazards, first differences, hazard ratios, and hazard rates.
 }
 \details{
-Uses \code{ggplot2} and \code{scatter3d} to plot the quantities of
+Uses \code{ggplot2} to plot the quantities of
 interest from \code{simspline} objects, including relative hazards, first
 differences, hazard ratios, and hazard rates. If currently does not support
 hazard rates for multiple strata.
 
-It can graph hazard rates as a 3D plot using \code{\link{scatter3d}} with
-the dimensions: Time, Hazard Rate, and the value of \code{Xj}. Ribbon plots
-are not available with 3D plots. You can also choose to plot hazard rates
-for a range of values of \code{Xj} in two dimensional plots at specific
-points in time. Each plot is arranged in a facet grid.
+You can to plot hazard rates for a range of values of \code{Xj} in two
+dimensional plots at specific points in time. Each plot is arranged in a
+facet grid.
 
 Note: A dotted line is created at y = 1 (0 for first difference), i.e. no
 effect, for time-varying hazard ratio graphs. No line is created for hazard
@@ -145,9 +133,6 @@ Sim2 <- coxsimSpline(M1, bspline = "pspline(orderent, df = 4)",
                     qi = "Hazard Rate",
                     Xj = seq(1, 30, by = 2), ci = 0.9, nsim = 10)
 
-# 3D plot hazard rate
-simGG(Sim2, zlab = "orderent", fit = "quadratic")
-
 # Create a time grid plot
 # Find all points in time where baseline hazard was found
 unique(Sim2$Time)
@@ -174,6 +159,6 @@ simGG(Sim3, xlab = "\\nFDA Drug Review Staff", alpha = 0.2,
 }
 \seealso{
 \code{\link{coxsimLinear}}, \code{\link{simGG.simtvc}},
-\code{\link{ggplot2}}, and \code{\link{scatter3d}}
+\code{\link{ggplot2}}
 }
 
